sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: value getNombrevaleurs
	var fin=getNombrevaleurs()-2
                ^